Explicitly import boxcox from MASS to resolve namespace issue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,10 @@ export(cm_null_estimate)
 export(doublet_cm)
 export(run_detection)
 export(run_preprocessing_pipeline)
-import(MASS)
 import(dplyr)
 import(ggplot2)
 import(readr)
 import(splines)
 import(stats)
 import(utils)
+importFrom(MASS,boxcox)
