--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(run_preprocessing_pipeline)
 import(dplyr)
 import(ggplot2)
 import(readr)
-import(splines)
 import(stats)
 import(utils)
 importFrom(MASS,boxcox)
+importFrom(splines,ns)
